# CryptoLake-Plataforma-de-Anal-tica-Crypto-en-Tiempo-Real

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: data-quality.yml
docker/spark/: Dockerfile  spark-defaults.conf
scripts/: health_check.py
src/orchestration/dags/: dag_full_pipeline.py
src/serving/api/: database.py  main.py
src/serving/dashboard/: app.py
src/transformation/dbt_cryptolake/: profiles.yml
tests/unit/: test_validators.py
